# trashscanner_predictor

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
config/dev/: config.yml
config/test/: config.yml
src/: config.py  main.py
src/app/: app.py
src/models/: response.py
src/services/: s3_client.py  trash_predictor.py
tests/: test_config.py  test_main.py  test_s3_client.py  test_trash_predictor.py
